<resources>
    <string name="app_name">Codecatchers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code_catchers">CODE CATCHERS</string>
    <string name="user_profile">[USER PROFILE]</string>
    <string name="sum_of_scores">Sum of Scores:</string>
    <string name="total_num_of_qr_scanned">Total num of QR scanned:</string>
    <string name="lowest_qr">Lowest QR</string>
    <string name="highest_qr">Highest QR</string>
    <string name="undefinedNum">XXXX</string>
    <string name="human_readable_name">Human Readable Name</string>
    <string name="qr_code_score">QR code score</string>
    <string name="highest_score">Highest Score:</string>
    <string name="lowest_score">Lowest Score:</string>
    <string name="comment">Comment</string>
    <string name="save_geolocation_of_qr_code">Save Geolocation of QR Code</string>
    <string name="take_a_photo_of_location">Take a Photo of Location</string>
    <string name="cancel">Cancel</string>
    <string name="add_code">Add Code</string>
    <string name="code_human_readable_name">Human Readable Name</string>
    <string name="coordinates">Coordinates: </string>
    <string name="location_image">Location Image</string>
    <string name="user_comment">User Comments Here</string>
    <string name="comments">COMMENTS</string>
    <string name="xxxxxxxxxx">XXXXXXXXXX</string>
    <string name="player_username">Player\'s UserName</string>
    <string name="player_s_score">Player\'s Score</string>
    <string name="delete_code">Delete Code</string>
    <string name="photo_of_location_of_qr_code_taken_by_user">Photo of location of QR code taken by User</string>
</resources>