<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodeViewFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:weightSum="1"
        android:showDividers="middle"
        android:divider="@drawable/empty_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/genImage"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_qr_code_2_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:divider="@drawable/empty_divider"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/codeHumanName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code_human_readable_name" />

                <LinearLayout
                    android:id="@+id/coordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:focusable="true">

                    <TextView
                        android:id="@+id/coords"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/coordinates" />

                    <TextView
                        android:id="@+id/coordView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xxxxxxxxxx" />
                </LinearLayout>

                <Button
                    android:id="@+id/viewImageLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/stacked_images"
                    android:text="@string/location_image" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/commentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.26"
            android:background="@color/baby_blue"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:clickable="true">

            <TextView
                android:id="@+id/commentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_comment" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SameUserList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:background="@color/baby_blue"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            tools:listitem="@layout/code_list_items" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="horizontal"
            android:divider="@drawable/empty_divider"
            android:gravity="center">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="69dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_arrow_back_24" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_code" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>