<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCodeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/purple_200"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/addQRImage"
                android:layout_width="134dp"
                android:layout_height="126dp"
                android:src="@drawable/baseline_qr_code_2_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addHumanName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Human Readable Name"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/addScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Score"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/addPhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/take_a_photo_of_location"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/editTextComment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88"
            android:focusable="true" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/geoLocation"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/save_geolocation_of_qr_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22000003"
            android:focusable="true" />


        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="193dp"
                android:layout_height="match_parent"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="193dp"
                android:layout_height="match_parent"
                android:text="@string/add_code" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>