<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:background="@android:color/background_light"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headerProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/code_catchers"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/subheaderProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_profile"
                android:textAlignment="center"
                android:textColor="#E45EC56C"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:backgroundTint="#E45EC56C"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="161dp"
                android:layout_height="130dp"
                android:background="#E45EC56C"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:src="@drawable/baseline_person_24"
                app:shapeAppearanceOverlay="@style/circular"
                app:tint="#E43DAC4C" />

            <LinearLayout
                android:id="@+id/profileInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="Username" />

                <TextView
                    android:id="@+id/totalPoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="Total points: [points displayed]" />

                <TextView
                    android:id="@+id/contactInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="Contact Info" />

                <TextView
                    android:id="@+id/currentRank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="Current Rank" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/walletLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topConstraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/highQR"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="20dp"
                    android:background="#E45EC56C"
                    android:text="@string/highest_qr"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/lowQR"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lowQR"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="30dp"
                    android:background="#E45EC56C"
                    android:text="@string/lowest_qr"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userQRList"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="#E45EC56C"
                android:clipToPadding="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                tools:listitem="@layout/profile_list_items"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomConstraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/scoreSum"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="20dp"
                    android:background="#E45EC56C"
                    android:text="@string/sum_of_scores"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/numQR"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/numQR"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="30dp"
                    android:background="#E45EC56C"
                    android:text="@string/total_num_of_qr_scanned"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>